metadata/objects/Unit__c.object
<CustomObject>
    <fields>
        <fullName>Door_Alarm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Door Alarm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Door_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Door Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firmware__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firmware</label>
        <referenceTo>Firmware__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pressure__c</fullName>
        <label>Air Pressure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Unit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>